--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,21 @@
 body {
     background-color: black;
-    color: white; /* Set text color to white for better contrast */
+    color: white;
 }
 
-/* Existing styles for gallery and quiz sections remain unchanged */
 .gallery {
     display: flex;
     justify-content: space-around;
     margin: 20px;
 }
 
+.gallery img {
+    max-width: 780px; 
+    height: auto;
+    max-height: 500px;
+    margin-bottom: 10px;
+}
+
 .quiz {
     margin: 20px;
-
+}
